--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.na00556573.eventregister">
+
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -13,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Social"></activity>
+        <activity android:name=".Social" />
         <activity android:name=".CommentSec" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -32,6 +33,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".NeweventActivity" />
         <activity android:name=".AccountActivity" />
+        <activity android:name=".NewPost"></activity>
     </application>
 
 </manifest>
