--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.na00556573.eventregister">
+
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -13,8 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".postCommentSection"
-            android:label="@string/title_postComments"/>
+        <activity
+            android:name=".postCommentSection"
+            android:label="@string/title_postComments" />
         <activity
             android:name=".Social"
             android:label="@string/title_socialActivity"
@@ -47,7 +49,10 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".NewPost"
-            android:label="@string/title_newPostActivity" />
+            android:label="@string/title_newPostActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Main2Activity"
+            android:label="@string/title_main2activity"></activity>
     </application>
 
 </manifest>
