--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:mediarouter-v7:26.1.0'
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
 }
